--- a/Templates/UPM_Reset_Password_form.html
+++ b/Templates/UPM_Reset_Password_form.html
@@ -30,6 +30,7 @@
     </style>
   </head>
   <body>
+  
     <div class="box-inside">
       <form method="POST" actions="" class="form-signin">
         {% csrf_token %}
@@ -37,29 +38,29 @@
           <img class="mb-4" src="https://www.prasetiyamulya.ac.id/wp-content/uploads/2020/02/Universitas-prasetiya-mulya-logo-bulat.jpg" alt="" width="72" height="72">
           <h1 class="h3 mb-3 font-weight-normal">UPM Audit</h1>
         </div>
-        {% for message in messages %}
-        <p id="messages" style="color: red; text-align: center;">{{message}}</p>
-        {% endfor %}
-        <div class="form-label-group">
-          <input type="username" name="username" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
-          <label for="inputEmail">Username</label>
-        </div>
 
         <div class="form-label-group">
-          <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-          <label for="inputPassword">Password</label>
+          <input type="password" name="new_password1" class="form-control" autocomplete="new-password" maxlength="254" required id="id_new_password1">
+          <label for="id_new_password1">New password:</label>
         </div>
-
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
+        <tr>
+          <li>Your password can’t be too similar to your other personal information.</li>
+          <li>Your password must contain at least 8 characters.</li>
+          <li>Your password can’t be a commonly used password.</li> 
+          <li>Your password can’t be entirely numeric.</li> 
+        </tr>
+        <br>
+        <div class="form-label-group">
+          <input type="password" name="new_password2" class="form-control" autocomplete="new-password" maxlength="254" required id="id_new_password2">
+          <label for="id_new_password2">New password confirmation:</label>
+          <div class="invalid-feedback">
+            Kata Sandi Tidak Sama
+          </div>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">Sign in</button>
-        <a class="mt-3 mb-3 text-muted text-center" href="/reset_password">Forgot Password?</a> 
-        <p class="mt-5 mb-3 text-muted text-center">&copy; 2020</p>
+        
+        <button class="btn btn-lg btn-primary btn-block" type="Submit" name="Update Password">Change Password</button>
+        <p class="mt-3 mb-3 text-muted text-center">&copy; 2020</p>
       </form>
-
 
 
   </body>
