--- a/Templates/UPM_Reset_Password.html
+++ b/Templates/UPM_Reset_Password.html
@@ -1,10 +1,11 @@
 {%load static%}
+
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UPM Audit - Login</title>
+    <title>UPM Audit - Reset Password</title>
 
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -31,36 +32,21 @@
   </head>
   <body>
     <div class="box-inside">
-      <form method="POST" actions="" class="form-signin">
+      <form method="POST" action="" class="form-signin">
         {% csrf_token %}
         <div class="text-center mb-4">
           <img class="mb-4" src="https://www.prasetiyamulya.ac.id/wp-content/uploads/2020/02/Universitas-prasetiya-mulya-logo-bulat.jpg" alt="" width="72" height="72">
-          <h1 class="h3 mb-3 font-weight-normal">UPM Audit</h1>
-        </div>
-        {% for message in messages %}
-        <p id="messages" style="color: red; text-align: center;">{{message}}</p>
-        {% endfor %}
-        <div class="form-label-group">
-          <input type="username" name="username" id="inputEmail" class="form-control" placeholder="Username" required autofocus>
-          <label for="inputEmail">Username</label>
+          <h1 class="h3 mb-3 font-weight-normal">Reset Password</h1>
         </div>
 
         <div class="form-label-group">
-          <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
-          <label for="inputPassword">Password</label>
+          <input type="email" name="email"  class="form-control" autocomplete="email" maxlength="254" required id="id_email" placeholder="Email Adress">
+          <label for="id_email">Email:</label>
         </div>
-
-        <div class="checkbox mb-3">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit" value="Login">Sign in</button>
-        <a class="mt-3 mb-3 text-muted text-center" href="/reset_password">Forgot Password?</a> 
+        
+        <button class="btn btn-lg btn-primary btn-block" type="Submit">Reset</button>
         <p class="mt-5 mb-3 text-muted text-center">&copy; 2020</p>
       </form>
-
-
 
   </body>
 </html>
