--- a/Templates/InformasiUmum.html
+++ b/Templates/InformasiUmum.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
 {% block content %}
   <section class="page-title" style="margin-left: 17.9rem; ">
-      <h3 class="font-weight-bold">Buku Panduan</h3>
+      <h3 class="font-weight-bold">Informasi Umum</h3>
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
       <a class="btn btn-primary">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -12,28 +12,15 @@
       </a>
   </section>
 
-  <section class="folder-card">
-    {%for item in informasiUmum%}
-      <div class="box-inside" style="margin-left: 15rem; margin-top: 2rem;">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="card card3">
-            <img src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1053&q=80" class="card-img-top card3-img" alt="">
-            <div class="card-body">
-              <div class="card-inside">
-                  <div class="card-text-inside">
-                      <h5 class="card-title">{{item.nama_folder}}</h5>
-                      <p class="card-text">Ini subtitle</p>
-                  </div>
-                  <div>
-                      <a href="#" class="btn btn-success mr-3 btn-card-menu">Open</a>
-                      <a href="#" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        {%endfor%}
+  <section class="page-title" style="margin-left: 17.9rem; margin-right: 4rem;">
+    <div class="list-group">
+      {%for item in informasiUmum%}
+        
+        <button type="button" class="list-group-item list-group-item-action">
+          {{item.nama_folder}}
+        </button>
+      {%endfor%}
+    </div>
   </section>
 
     {% endblock %}
