--- a/Templates/main.html
+++ b/Templates/main.html
@@ -20,7 +20,7 @@
             <div class="card card1">
               <div class="card-header card1-2" id="headingOne">
                 <h2 class="mb-0"></h2>
-                <a class="btn btn-link btn-block text-left button1" type="button" href="#">
+                <a class="btn btn-link btn-block text-left button1" type="button" href="{% url 'Informasi_Umum' %}">
                     Informasi Umum
                   </a>
                 </h2>
