--- a/Templates/InformasiUmum.html
+++ b/Templates/InformasiUmum.html
@@ -16,14 +16,14 @@
     <div class="list-group">
       {%for item in informasiUmum%}
         
-        <button type="button" class="list-group-item list-group-item-action">
+        <a type="button" class="list-group-item list-group-item-action button" href="{% url 'sub_informasi_umum' item.id %}">
           {{item.nama_folder}}
-        </button>
+        </a>
       {%endfor%}
     </div>
   </section>
 
-    {% endblock %}
+{% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
