--- a/Templates/SubInformasiUmum.html
+++ b/Templates/SubInformasiUmum.html
@@ -1,7 +1,8 @@
 {% extends 'main.html' %}
+{% load static %}
 {% block content %}
   <section class="page-title" style="margin-left: 17.9rem; ">
-      <h3 class="font-weight-bold">Buku Panduan</h3>
+      <h3 class="font-weight-bold">Informasi Umum</h3>
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
       <a class="btn btn-primary">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -13,30 +14,30 @@
   </section>
 
   <section class="folder-card">
-      <div class="box-inside" style="margin-left: 15rem; margin-top: 2rem;">
-      <div class="row">
-        {% for item in bukupanduan %}
-        <div class="col-sm-6">
-          <div class="card card3">
-            <img src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1053&q=80" class="card-img-top card3-img" alt="">
-            <div class="card-body">
-              <div class="card-inside">
-                  <div class="card-text-inside">
-                      <h5 class="card-title">{{item.nama_file}}</h5>
-                      <p class="card-text">Ini subtitle</p>
-                  </div>
-                  <div>
-                      <a href="#" class="btn btn-success mr-3 btn-card-menu">Open</a>
-                      <a href="#" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
-                  </div>
-              </div>
+    <div class="box-inside" style="margin-left: 15rem; margin-top: 2rem;">
+    <div class="row">
+      {% for item in files %}
+      <div class="col-sm-6">
+        <div class="card card3">
+          <img src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1053&q=80" class="card-img-top card3-img" alt="">
+          <div class="card-body">
+            <div class="card-inside">
+                <div class="card-text-inside">
+                    <h5 class="card-title">{{item.nama_file}}</h5>
+                    <p class="card-text">Ini subtitle</p>
+                </div>
+                <div>
+                    <a href="{% static item.file_attachment.url %}" class="btn btn-success mr-3 btn-card-menu">Open</a>
+                    <a href="#" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
+                </div>
             </div>
           </div>
         </div>
-        {% endfor %}
+      </div>
+      {% endfor %}
   </section>
 
-    {% endblock %}
+{% endblock %}
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
