--- a/Templates/SubInformasiUmum.html
+++ b/Templates/SubInformasiUmum.html
@@ -1,8 +1,20 @@
 {% extends 'main.html' %}
 {% load static %}
 {% block content %}
+
+<section>
+  <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="{% url 'Informasi_Umum' %}">Informasi Umum</a></li>
+
+        <li class="breadcrumb-item active" aria-current="page" href="">{{judul}}</li>
+        
+      </ol>
+  </nav>
+</section>
+
   <section class="page-title" style="margin-left: 17.9rem; ">
-      <h3 class="font-weight-bold">Informasi Umum</h3>
+      <h3 class="font-weight-bold">{{judul.nama_folder}}</h3>
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
       <a class="btn btn-primary">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -14,10 +26,10 @@
   </section>
 
   <section class="folder-card">
-    <div class="box-inside" style="margin-left: 15rem; margin-top: 2rem;">
+    <div class="box-inside">
     <div class="row">
       {% for item in files %}
-      <div class="col-sm-6">
+      <div class="col-sm-6" data-role="card-menus">
         <div class="card card3">
           <img src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1053&q=80" class="card-img-top card3-img" alt="">
           <div class="card-body">
@@ -35,6 +47,27 @@
         </div>
       </div>
       {% endfor %}
+      {% for itemfolder in subfolder1 %}
+      <div class="col-sm-6" data-role="card-menus">
+        <div class="card card3">
+          <img src="https://images.unsplash.com/photo-1544396821-4dd40b938ad3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1053&q=80" class="card-img-top card3-img" alt="">
+          <div class="card-body">
+            <div class="card-inside">
+                <div class="card-text-inside">
+                    <h5 class="card-title">{{itemfolder.nama_folder}}</h5>
+                    <p class="card-text">Ini subtitle</p>
+                </div>
+                <div>
+                    <a href="{% url 'sub_folder_informasi_umum1' itemfolder.id %}" class="btn btn-success mr-3 btn-card-menu">Open</a>
+                    <a href="#" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      {% endfor %}
+    </div>
+    </div>
   </section>
 
 {% endblock %}
