--- a/Templates/main.html
+++ b/Templates/main.html
@@ -1,75 +1,92 @@
-{%load static%}
-<!doctype html>
+{% load static %}
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UPM Site</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/main.css'%}"> 
     <link rel="stylesheet" href="{% static 'css/BukuPanduan.css'%}">
-    <title>Prasetiya Mulya UPM</title>
-  </head>
-  <body>
-    <div id="wrapper">
-      <div id="sidebar-wrapper">
-        <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
-          <img src="https://www.prasetiyamulya.ac.id/wp-content/uploads/2019/08/Universitas-Prasetiya-Mulya_logo_01-Putih.png" alt="" class="logo" style="width: 230px; height: auto;">
-          <div class="accordion navigation_menu pt-3" id="accordionExample">
+
+
+</head>
+<body>
+    <section class="left_navigation">
+        <!--Logo prasmul-->
+        <img src="https://lms.prasetiyamulya.ac.id/pluginfile.php/1/core_admin/logo/0x200/1601623298/logo_upm_putih.png" class="prasmul_logo pt-3">
+
+        <!--Navigation Menu-->
+        <div class="accordion navigation_menu pt-3" id="accordionExample">
             <div class="card card1">
-              <div class="card-header card1-2" id="headingOne">
-                <h2 class="mb-0"></h2>
-                <a class="btn btn-link btn-block text-left button1" type="button" href="{% url 'Informasi_Umum' %}">
-                    Informasi Umum
+              <div class="card-head card1-2" id="headingOne">
+                <h2 class="mb-0">
+                    <a class="btn btn-link btn-block text-left button1" type="button" href="https://www.google.com">
+                        <div class="button-content">
+                            <svg width="1.25em" height="1.25em" viewBox="0 0 16 16" class="bi bi-house-door-fill house_icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z"/>
+                                <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                            </svg>
+                            Home
+                        </div>
                   </a>
                 </h2>
               </div>
             </div>
 
-
             <div class="card card1">
-              <div class="card-header card1-2" id="headingTwo">
+              <div class="card-head card1-2" id="headingTwo">
                 <h2 class="mb-0">
                   <button class="btn btn-link btn-block text-left collapsed button1" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                   Audit Mutu Internal <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-                  </svg>
+                    <div class="button-content-2">
+                        <div>Audit Mutu Internal</div>
+                        <div class="caret">
+                          <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                          </svg>
+                        </div>
+                    </div>
                   </button>
                 </h2>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="https://www.google.com">
                   Umum
                 </a>
-                <div class="accordion navigation_menu ml-1" id="accordionExampleTwo">
-                  <div class="card-header card1-2" id="headingFour">
+                <div class="accordion navigation_menu" id="accordionExampleTwo">
+                  <div class="card-head card1-2" id="headingFour">
                     <h2 class="mb-0">
-                      <button class="btn btn-link btn-block text-left collapsed button1" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                        Prodi <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-                        </svg>
+                      <button class="btn btn-link btn-block-inside text-left collapsed button1 ml-4" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        <div class="button-content-3">
+                          <div>Prodi</div>
+                          <div class="caret">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                              <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                            </svg>
+                          </div>
+                        </div>
                       </button>
                     </h2>
                   </div>
                   <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExampleTwo">
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
                       Business Mathematics
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
                       Food Business Technology
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
                       Renewable Energy Engineering
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
                       Computer System Engineering
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
-                      Software Technology
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
+                      Software Engineering
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
-                      Product Design Technology
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
+                      Product Design Engineering
                     </a>
                   </div>
                 </div>
@@ -77,91 +94,124 @@
             </div>
 
             <div class="card card1">
-              <div class="card-header card1-2" id="headingThree">
+              <div class="card-head card1-2" id="headingThree">
                 <h2 class="mb-0">
                   <button class="btn btn-link btn-block text-left collapsed button1" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                   Akreditasi BAN PT <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-                  </svg>
+                    <div class="button-content-2">
+                      <div>Akreditasi BAN PT</div>
+                      <div class="caret">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                          <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                        </svg>
+                      </div>
+                  </div>
                   </button>
                 </h2>
               </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExampleThree">
-                <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="https://www.google.com">
                   Umum
                 </a>
-                <div class="accordion navigation_menu ml-1" id="accordionExampleThree">
-                  <div class="card-header card1-2" id="headingFive">
+                <div class="accordion navigation_menu" id="accordionExampleThree">
+                  <div class="card-head card1-2" id="headingFive">
                     <h2 class="mb-0">
-                      <button class="btn btn-link btn-block text-left collapsed button1" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                        Prodi <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                          <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-                        </svg>
+                      <button class="btn btn-link btn-block-inside text-left collapsed button1 ml-4" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        <div class="button-content-3">
+                          <div>Prodi</div>
+                          <div class="caret">
+                            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                              <path fill-rule="evenodd" d="M7.646 4.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 5.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+                            </svg>
+                          </div>
+                        </div>
                       </button>
                     </h2>
                   </div>
                   <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExampleThree">
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
                       Business Mathematics
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
                       Food Business Technology
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
                       Renewable Energy Engineering
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
                       Computer System Engineering
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
-                      Software Technology
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
+                      Software Engineering
                     </a>
-                    <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="#">
-                      Product Design Technology
+                    <a class="btn btn-link btn-block text-left button1 button-prodi" type="button" href="https://www.google.com">
+                      Product Design Engineering
                     </a>
                   </div>
                 </div>
               </div>
             </div>
 
-      </div>
-    </div>
-      <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="search1 ml-4">
-          <input class="input-sm border-0 p-2 col-md-11 input_search1" type="text" placeholder="Search anything...">
-        </div>
-
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Hello, Nama User 
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/logout">Log out</a>
+            <div class="card card1">
+              <div class="card-head card1-2" id="headingOne">
+                <h2 class="mb-0"></h2>
+                  <a class="btn btn-link btn-block text-left button1" type="button" href="{% url 'Informasi_Umum' %}">  
+                    <div class="button-content">
+                        <svg width="1.25em" height="1.25em" viewBox="0 0 16 16" class="bi bi-info-circle-fill house_icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
+                        </svg>
+                        Informasi Umum
+                    </div>
+                  </a>
+                </h2>
               </div>
-            </li>
-          </ul>
-        </div>
-          <div id="container">
-            <div class="avatar">
-              <img src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1868&q=80" alt="">
             </div>
         </div>
-      </div>
-    </nav>
-    </nav>
-    {% block content %}
+    </section> 
 
-    {% endblock %}
+    <section>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light top-bar">
+          <div class="search1">
+            <input class="input-sm border-0 p-2 col-md-11 input_search1" id="searchbox" type="text" placeholder="Search anything...">
+          </div>
 
-    
+          <div class="profile-area">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle user-dropdown" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Nama User 
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="#">Pengaturan profil</a>
+                  <a class="dropdown-item" href="#">Informasi penting</a>
+                  <a class="dropdown-item" href="#">Settings</a>
+                  <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="/logout">Log out</a>
+                </div>
+              </li>
+            </ul>
+            <div id="container">
+              <div class="avatar">
+                <img src="https://images.unsplash.com/photo-1531427186611-ecfd6d936c79?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1868&q=80" alt="">
+              </div>
+            </div>
+          </div>  
+        </nav>
+
+        <!-- <section>
+          <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="#">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Library</li>
+              </ol>
+          </nav>
+        </section> -->
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  </body>
-</html>
+    <script src="{% static 'java/script.js'%}"></script>
 
+    {% block content %}
+    {% endblock %}
+</body>
+</html>
