--- a/Templates/main.html
+++ b/Templates/main.html
@@ -109,7 +109,7 @@
                 </h2>
               </div>
               <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="https://www.google.com">
+                <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="{% url 'ABPT_Umum' %}">
                   Umum
                 </a>
                 <div class="accordion navigation_menu" id="accordionExampleThree">
