--- a/Templates/main.html
+++ b/Templates/main.html
@@ -51,7 +51,7 @@
                 </h2>
               </div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="https://www.google.com">
+                <a class="btn btn-link btn-block text-left button1 ml-4" type="button" href="{% url 'ami_umum' %}">
                   Umum
                 </a>
                 <div class="accordion navigation_menu" id="accordionExampleTwo">
