--- a/Templates/AMIUmum.html
+++ b/Templates/AMIUmum.html
@@ -5,7 +5,7 @@
 <section>
   <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="{% url 'Informasi_Umum' %}">Informasi Umum</a></li>
+        <li class="breadcrumb-item"><a href="{% url 'ami_umum' %}">AMI Umum</a></li>
 
         <li class="breadcrumb-item active" aria-current="page" href="">{{judul}}</li>
         
@@ -14,9 +14,9 @@
 </section>
 
   <section class="page-title" style="margin-left: 17.9rem; ">
-      <h3 class="font-weight-bold">{{judul.nama_folder}}</h3>
+      <h3 class="font-weight-bold">AMI Umum</h3>
       <p class="font-weight-light">Universitas Prasetiya Mulya</p>
-      <a class="btn btn-primary" href="{% url 'AddFile_BukuPanduan' %}">
+      <a class="btn btn-primary">
           <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
               <path fill-rule="evenodd" d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
@@ -39,8 +39,7 @@
                 </div>
                 <div>
                     <a href="{% static item.file_attachment.url %}" class="btn btn-success mr-3 btn-card-menu">Open</a>
-                    <a href="{% url 'UpdateFile_BukuPanduan' id=item.id %}" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
-                    <a href="{% url 'DeleteFile_BukuPanduan' id=item.id %}" class="btn btn-danger mr-3 btn-card-menu">Delete</a>
+                    <a href="#" class="btn btn-warning mr-3 btn-card-menu">Edit</a>
                 </div>
             </div>
           </div>
