--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,228 +37,246 @@ text-decoration: none;
 }
 
 .button1-2{
-margin-top: -10px;
-margin-bottom: -10px;
-margin-left: 30px;
+  margin-top: -10px;
+  margin-bottom: -10px;
+  margin-left: 30px;
 }
 
 .button1:hover{
-color: white;
-text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .button1:hover{
-background-color: #00000041;
-text-decoration: none;
+  background-color: #00000041;
+  text-decoration: none;
 }
 
 .button-content {
-margin-left: 1.05rem;
+  margin-left: 1.05rem;
 }
 
 .button-content-2 {
-margin-left: 1.05rem;
-display: flex;
-justify-content: space-between;
+  margin-left: 1.05rem;
+  display: flex;
+  justify-content: space-between;
 }
 
 .button-content-3 {
-display: flex;
-justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .caret {
--moz-transition: all 0.3s linear; 
--webkit-transition: all 0.3s linear;
-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear; 
+  -webkit-transition: all 0.3s linear;
+  transition: all 0.3s linear;
 }
 
 .caret.rotate {
--moz-transition: rotate(180deg);
--webkit-transition: rotate(180deg);
-transition: rotate(180deg);
+  -moz-transition: rotate(180deg);
+  -webkit-transition: rotate(180deg);
+  transition: rotate(180deg);
 }
 
 .collapsed .caret {
--webkit-transform: rotate(180deg);
-transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .dropdown-toggle[aria-expanded="true"]:after {
-transform: rotate(180deg); 
+  transform: rotate(180deg); 
 }
 
 .dropdown-toggle:after { 
-transition: 0.7s; 
+  transition: 0.7s; 
 }
 
 .button-prodi {
-margin-left: 2rem !important;
+  margin-left: 2rem !important;
 }
 
 .btn-block-inside {
-display: block;
-width: 91%;
+  display: block;
+  width: 91%;
 }
 
 .house_icon{
-margin-top: -5px;
-margin-right: 7px;
+  margin-top: -5px;
+  margin-right: 7px;
 }
 
 .button1:focus{
-box-shadow: none !important;
-text-decoration: none;
+  box-shadow: none !important;
+  text-decoration: none;
 }
 
 .top_bar{
-width: 1274px;
-min-height: 4rem;
-top: 0px;
-margin-left: 261px;
-background: #FFFFFF;
-box-shadow: 0px 0px 21px -9px rgba(116, 155, 255, 0.39);
+  width: 1274px;
+  min-height: 4rem;
+  top: 0px;
+  margin-left: 261px;
+  background: #FFFFFF;
+  box-shadow: 0px 0px 21px -9px rgba(116, 155, 255, 0.39);
 }
 
 .home_bar-home{
-font-family: 'Montserrat', sans-serif;
-font-size: 20px;
-font-weight: 800;
-margin-top: 90px;
-margin-left: 8px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  font-weight: 800;
+  margin-top: 90px;
+  margin-left: 8px;
 }
 
 .top-bar {
-display: flex;
-justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .avatar{
-margin-right: 30px;
-margin-left: 20px;
-top: 5%;
-left: 10%;
+  margin-right: 30px;
+  margin-left: 20px;
+  top: 5%;
+  left: 10%;
 }
 .avatar img{
-width: 35px;
-height: 35px;
-border-radius: 100%;
-border: 1px solid white;
+  width: 35px;
+  height: 35px;
+  border-radius: 100%;
+  border: 1px solid white;
 }
 
 .profile-area {
-display: flex;
+  display: flex;
 }
 
 .user-dropdown {
-text-decoration: none;
+  text-decoration: none;
 }
 
 .search1{
-display: flex;
-align-items: center;
-justify-content: center;
-height: 100%;
-width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 350px;
 }
 
 .input_search1{
-vertical-align: middle;
-padding-top: 0.8rem !important;
-padding-bottom: 0.3rem !important;
-border-bottom: 1px solid #000 !important;
-background-color: #f8f9fa;
+  vertical-align: middle;
+  padding-top: 0.8rem !important;
+  padding-bottom: 0.3rem !important;
+  border-bottom: 1px solid #000 !important;
+  background-color: #f8f9fa;
 }
 
 .input_search1:focus{
-outline: none;
+  outline: none;
 }
 
 .card3 {
-margin-top: 1rem;
+  margin-top: 1rem;
 }
 
 .column {
-position: relative;
+  position: relative;
 }
 
 .card3-img {
-height: 7rem;
+  height: 7rem;
 }
 
 .card-inside {
-display: flex;
-justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .card-text-inside {
-flex-direction: column;
+  flex-direction: column;
 }
 
 @media(min-width:768px) {
-.left_navigation{
-max-width: 261px;
-height: 100vh;
-background-color: #31548C;
-position: fixed;
-}
-#wrapper {
-padding-left: 250px;
-}
-.fixed-brand {
-width: 250px;
-}
-#wrapper.toggled {
-padding-left: 0;
-}
-#sidebar-wrapper {
-width: 250px;
-}
-.breadcrumb {
-margin-left: 250px;
-}
-ol.breadcrumb {
-padding-left: 27px;
-}
-.page-title {
-margin-top: 2rem;
-margin-left: 17.5rem;
-}
-.box-inside {
-background: #FFFFFF;
-padding-top: 5px;
-margin-left: 15rem;
-} 
-.folder-card {
-margin-left: 2.5rem;
-margin-right: 2.5rem;
-}
-.top-bar {
-margin-left: 261px;
-}
-/* Tambah 1 class ini (form-area) */
-.form-area {
-margin-left: 2.5rem;
-margin-right: 2.5rem;
-}
+  .left_navigation{
+    max-width: 261px;
+    height: 100vh;
+    background-color: #31548C;
+    position: fixed;
+    transition: all 0.5s;
+  }
+  #rightScreen {
+    transition: all 0.5s;
+  }
+  #wrapper {
+  padding-left: 250px;
+  }
+  .fixed-brand {
+  width: 250px;
+  }
+  #wrapper.toggled {
+  padding-left: 0;
+  }
+  #sidebar-wrapper {
+  width: 250px;
+  }
+  .breadcrumb {
+  margin-left: 250px;
+  }
+  ol.breadcrumb {
+  padding-left: 27px;
+  }
+  .page-title {
+  margin-top: 2rem;
+  margin-left: 17.5rem;
+  }
+  .box-inside {
+  background: #FFFFFF;
+  padding-top: 5px;
+  margin-left: 15rem;
+  } 
+  .folder-card {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+  }
+  .top-bar {
+  margin-left: 261px;
+  }
+  .form-area {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+  }
+  #leftSidebar.toggled {
+    margin-left: -261px;
+    transition: all 0.5s;
+  }
+  #rightScreen.toggled {
+    margin-left: -250px;
+    transition: all 0.5s;
+  }
 }
 
 @media(max-width:768px) {
-.page-title {
-  margin-top: 2rem;
-  margin-left: 1.5rem;
+  .left_navigation{
+    background-color: #31548C;
+    transition: all 0.5s;
+  }
+  .page-title {
+      margin-top: 2rem;
+      margin-left: 1.5rem;
+  }
+  .folder-card {
+      margin-left: 1.5rem;
+      margin-right: 1.5rem;
+  }
+  .form-area {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
+  }
+  #leftSidebar.toggled {
+    margin-top: -384px;
+    transition: all 0.5s;
+  }
 }
-.folder-card {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
-}
-/* Ini juga (form-area) */
-/* Bedain width media nya*/
-.form-area {
-margin-left: 1.5rem;
-margin-right: 1.5rem;
-}
-.left_navigation{
-display: none;
-}
+
+.right-menu {
+  display: flex;
 }
